width overflow issue corrected

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,5 +1,5 @@
 body {
-    width: 100dvw;
+    max-width: 100%;
 }
 
 #root {
@@ -12,6 +12,7 @@ main {
     padding-bottom: 2rem;
     box-sizing: border-box;
     max-width: 100%;
+    box-sizing: border-box;
 }
 
 .flexBoxColumn {
